// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput should be rendered correctly 1`] = `
<label
  className="container root size-18 -clickable"
>
  <div
    className="uui-radioinput"
  >
    <input
      aria-checked={null}
      checked={null}
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
  </div>
</label>
`;

exports[`RadioInput should be rendered correctly 2`] = `
<label
  className="container root size-18 -clickable"
>
  <div
    className="uui-radioinput"
  >
    <input
      aria-checked={null}
      checked={null}
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
  </div>
  <div
    className="uui-input-label"
    role="label"
  >
    Open
  </div>
</label>
`;
